gitops/apps/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    platform.lab/gateway-access: public # allows HTTPRoutes to bind to the public Gateway
    pod-security.kubernetes.io/enforce: restricted
